--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 Аутентичные низкие кроссовки с мыском-ракушкой
                             </p>
                             <div class="main__foto main__foto_small">
-                                <div class="swiper-container">
+                                <div class="swiper">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <img src="./img/eddie-palmore-XwWGyrVidZE-unsplash-removebg 1.png" alt="">
@@ -95,7 +95,7 @@
                         </a>
                     </div>
                     <div class="main__foto">
-                        <div class="swiper-container">
+                        <div class="swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <img src="./img/eddie-palmore-XwWGyrVidZE-unsplash-removebg 1.png" alt="">
