--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </h4>
                     <hr>
                     <a href="#">
-                        О компагии
+                        О компании
                     </a> <br>
                     <a href="#">
                         Каталог
