--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         Основные ссылки
                     </h4>
                     <hr>
-                    <a href="#">
+                    <a href="https://leonid-kosch.github.io/adidas-2page/">
                         О компании
                     </a> <br>
                     <a href="#">
