--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <hr>
                     <a href="#"><i class="fab fa-vk"></i></a>
                     <a href="https://www.facebook.com/adidas"><i class="fab fa-facebook-square"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/adidas/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
